tests/rosetta/out/Rust/abbreviations-automatic.error
rustc: exit status 1
warning: unnecessary parentheses around assigned value
  --> /tmp/abbreviations_automatic.rs:52:20
   |
52 |         let size = (words.len() as i32);
   |                    ^                  ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
52 -         let size = (words.len() as i32);
52 +         let size = words.len() as i32;
   |

warning: denote infinite loops with `loop { ... }`
  --> /tmp/abbreviations_automatic.rs:54:9
   |
54 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
  --> /tmp/abbreviations_automatic.rs:30:24
   |
25 |     let takeRunes = move |s: String, n: i32| -> String {
   |                                                 ------ expected `String` because of return type
...
30 |                 return &s[(0) as usize..(idx) as usize];
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
   |
help: try using a conversion method
   |
30 |                 return (&s[(0) as usize..(idx) as usize]).to_string();
   |                        +                                +++++++++++++

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0308`.
